Perform layout when viewport size is queried.

If a Frame has non-overlay scrollbars, the visualViewport's dimensions
should exclude them. In order to know whether the Frame has scrollbars,
we need to perform any pending layouts.

This was only broken for iframes as the main frame viewport size
depends on page scale. Page scale depends on layout to determine
the minimum/initial page scale so we already performed layout when the
main frame's viewport was queried.

BUG=714829

Review-Url: https://codereview.chromium.org/2842343002
Cr-Commit-Position: refs/heads/master@{#467718}

Former-commit-id: 396aeae063fa2f8a1e7422bc86a568239bf8fca4